manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: art-portfolio
spec:
  ports:
  - port: 5000
  selector:
    app: backend
