manifests/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: art-portfolio
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
  clusterIP: None
