manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: art-portfolio
spec:
  ports:
  - port: 80
  selector:
    app: frontend
