manifests/ingress-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31588
  - name: https
    port: 443
    targetPort: 443
    nodePort: 32443
